# Long-Numeric-Arithmetic

./: .gitignore  CMakeLists.txt  README.md  base1024_Arithematic.cpp  base1e6_Arithematic.cpp  long_integer_arithmetic.cpp  main.cpp  operate.h  operator.cpp
Benchmarks/: README.md
Benchmarks/100k !/: README.MD  c++_100k.cpp  java_100k.java  python_100k.py
Benchmarks/10k !/: Java_10k.java  README.MD  c++_10k.cpp  help.cpp  python_10k.py
Legacy Code (Earlier Version)/: base1e6_Arithematic.cpp
Legacy-Code (Earlier Version)/: README.md  base1024_Arithematic.cpp  long_integer_arithmetic.cpp
Long-Numeric-Arithemetic/: NUMBER.cpp  NUMBER.h  main.cpp
Long-Numeric-Arithemetic/temp-factorial/: factorialbase9.cpp
include/: Compare.h  NUMBER.h  NumberUtils.h  long_numeric_arithemetic.h  operate.h  operator.h
include/operations/: addition.h
include/special_ops/: factorialbase9.h
src/: Compare.cpp  NUMBER.cpp  NumberUtils.cpp  operator.cpp
src/operations/: addition.cpp
src/special_ops/: factorialbase9.cpp
